--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -38,6 +38,7 @@
 	<!-- //for-mobile-apps -->
 	<link href="/assets/website/css/clashgithub/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="/assets/website/css/clashgithub/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" href="/assets/website/css/G.css" />
 	<!-- js -->
 	<script type="text/javascript" src="/assets/website/js/frontend/clashgithub/jquery-2.1.4.min.js"></script>
 	<!-- //js -->
@@ -119,6 +120,34 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-03-26">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/33b1ff2369380b61bcbd99951db89701.webp" alt="3月26日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-3-26-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月26日→19.9M/S|2025年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、美国、韩国、日本、加拿大、欧洲、新加坡等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
+                                    <div class="welcome xcblog-blog-item" data-date="2025-03-25">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-3-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="3月25日→22.1M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-3-25-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月25日→22.1M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、日本、欧洲、新加坡、韩国、加拿大、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-03-24">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-3-24-free-v2ray.htm" class="xcblog-blog-url">
@@ -231,34 +260,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-03-15">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/fef0909e4847bf6f5fa889948879dd84.webp" alt="3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了美国、加拿大、香港、韩国、新加坡、日本、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2025-03-14">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2025-3-14-free-v2ray.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="3月14日→18.5M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2025-3-14-free-v2ray.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">3月14日→18.5M/S|2025年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、美国、日本、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -269,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-clash.htm" title="4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐">4月4日→20.5M/S|2025年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/news/article-69986.htm" title="Shell常用脚本：Nginx安装脚本">Shell常用脚本：Nginx安装脚本</a></li>
-                        <li class="py-2"><a href="/news/article-97537.htm" title="宠物领养中心需要什么条件才能去上班（宠物领养机构在哪里）">宠物领养中心需要什么条件才能去上班（宠物领养机构在哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-83600.htm" title="在Java中从控制台读取输入的方法">在Java中从控制台读取输入的方法</a></li>
+                        <li class="py-2"><a href="/news/article-73956.htm" title="宠物医院社会实践心得（宠物医院实践活动总结）">宠物医院社会实践心得（宠物医院实践活动总结）</a></li>
                         <li class="py-2"><a href="/news/article-87173.htm" title="动物疫苗接种时间查询app（动物疫苗批号查询）">动物疫苗接种时间查询app（动物疫苗批号查询）</a></li>
-                        <li class="py-2"><a href="/news/article-71972.htm" title="动物疫苗接种时间表（动物 疫苗）">动物疫苗接种时间表（动物 疫苗）</a></li>
-                        <li class="py-2"><a href="/news/article-82168.htm" title="医院妇产科领养孩子送房子（医院妇产科领养孩子送房子可以吗）">医院妇产科领养孩子送房子（医院妇产科领养孩子送房子可以吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-v2ray.htm" title="3月24日→21.1M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐">3月24日→21.1M/S|2025年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-94581.htm" title="动物医院大众点评文案范文图片（动物医院大众点评100字通用评论）">动物医院大众点评文案范文图片（动物医院大众点评100字通用评论）</a></li>
-                        <li class="py-2"><a href="/news/article-93805.htm" title="【Vue.js】兄弟组件之间调用对方的方法">【Vue.js】兄弟组件之间调用对方的方法</a></li>
                         <li class="py-2"><a href="/news/article-69987.htm" title="动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点">动物疫苗去哪里买比较好 动物疫苗去哪里买比较好一点</a></li>
-                        <li class="py-2"><a href="/news/article-86468.htm" title="动物医院注册资金最低（动物医院注册资金最低多少）">动物医院注册资金最低（动物医院注册资金最低多少）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-free-high-speed-nodes.htm" title="3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">3月15日→22.7M/S|2025年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-93805.htm" title="【Vue.js】兄弟组件之间调用对方的方法">【Vue.js】兄弟组件之间调用对方的方法</a></li>
+                        <li class="py-2"><a href="/news/article-86466.htm" title="SSM三大框架工作流程与原理详解">SSM三大框架工作流程与原理详解</a></li>
+                        <li class="py-2"><a href="/news/article-71310.htm" title="动物医院的英文名叫什么（动物医院英语翻译）">动物医院的英文名叫什么（动物医院英语翻译）</a></li>
                     </ul>
     </div>
 </div>
@@ -290,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">53</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
